# lyon-deck-toolbox

./: Cargo.toml  Lyon's Deck Toolbox.desktop  README.md  Steam Deck Tools.desktop  release.sh  tools.yaml
install_scripts/: cryoutilities.sh  decky-loader.sh  deckyloader.sh  emudeck.sh  needs_root.sh  rwfus.sh  steamosbtrfs.sh
src/: lib.rs  main.rs
