[package]
name = "steam-deck-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
git-download = "0.1.1"

[profile.release]
strip = true 
opt-level = 3
lto = true
codegen-units = 1