[package]
name = "lyon-deck-toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.19.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
anyhow = "1.0.66"
png-decoder = "0.1.1"

[profile.release]
strip = true 
opt-level = 3
lto = true
codegen-units = 1
incremental = true
panic = "abort"